attachments/download/158/const-init.txt
src/exif.cpp:703:24: error: default initialization of an object of const type 'class Exiv2::IptcData const' requires a user-provided default constructor
        const IptcData emptyIptc;
                       ^
src/exif.cpp:704:24: error: default initialization of an object of const type 'class Exiv2::XmpData const' requires a user-provided default constructor
        const XmpData  emptyXmp;
                       ^
src/exif.cpp:889:31: error: default initialization of an object of const type 'Exiv2::IptcData const' requires a user-provided default constructor
        const Exiv2::IptcData emptyIptc;
                              ^
src/exif.cpp:890:31: error: default initialization of an object of const type 'Exiv2::XmpData const' requires a user-provided default constructor
        const Exiv2::XmpData  emptyXmp;
                              ^
src/preview.cpp:650:24: error: default initialization of an object of const type 'class Exiv2::IptcData const' requires a user-provided default constructor
        const IptcData emptyIptc;
                       ^
src/preview.cpp:651:24: error: default initialization of an object of const type 'class Exiv2::XmpData const' requires a user-provided default constructor
        const XmpData  emptyXmp;
                       ^
